--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "build/app.js",
   "scripts": {
+    "start": "node src/app.js",
     "build": "npx tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
