--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node build/app.js",
     "build": "npx tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "local": "npx ts-node src/app.ts"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,9 @@
     "typescript": "^4.1.2"
   },
   "devDependencies": {
-    "@types/node": "^14.14.9"
+    "@types/express": "^4.17.9",
+    "@types/node": "^14.14.9",
+    "object-hash": "^2.0.3",
+    "ts-node": "^9.0.0"
   }
 }
