--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node build/app.js",
     "build": "npx tsc",
-    "local": "npx ts-node -e 'require(\"./src/app.ts\").devInit()'"
+    "local": ". ./source_me.sh && npx ts-node -e 'require(\"./src/app.ts\").devInit()'"
   },
   "repository": {
     "type": "git",
@@ -19,12 +19,15 @@
   },
   "homepage": "https://github.com/Schokokex/cloudy_files_bot#readme",
   "dependencies": {
+    "axios": "^0.21.0",
     "express": "^4.17.1",
+    "pg": "^8.5.1",
     "typescript": "^4.1.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
     "@types/node": "^14.14.9",
+    "@types/pg": "^7.14.7",
     "ts-node": "^9.0.0"
   }
 }
