--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node build/app.js",
     "build": "npx tsc",
-    "local": ". ./source_me.sh && npx ts-node -e 'require(\"./src/app.ts\").devInit()'"
+    "local": ". ./source_me.sh; npx ts-node -e 'require(\"./src/app.ts\").devInit()'"
   },
   "repository": {
     "type": "git",
@@ -19,9 +19,9 @@
   },
   "homepage": "https://github.com/Schokokex/cloudy_files_bot#readme",
   "dependencies": {
-    "axios": "^0.21.0",
     "express": "^4.17.1",
     "pg": "^8.5.1",
+    "selfsigned": "^1.10.8",
     "typescript": "^4.1.2"
   },
   "devDependencies": {
