--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/Schokokex/cloudy_files_bot#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "form-data": "^3.0.0",
     "pg": "^8.5.1",
     "selfsigned": "^1.10.8",
     "typescript": "^4.1.2"
