--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Schokokex/cloudy_files_bot#readme",
   "dependencies": {
+    "axios": "^0.21.0",
     "express": "^4.17.1",
     "form-data": "^3.0.0",
     "pg": "^8.5.1",
