--- a/.github/workflows/ibm.yml
+++ b/.github/workflows/ibm.yml
@@ -20,18 +20,19 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Deploy to IBM Cloud Foundry
-        # You may pin to the exact commit or the version.
-        # uses: IBM/cloudfoundry-deploy@0411dd72fe1b214e3daa478b847be6602d3335f1
-        uses: IBM/cloudfoundry-deploy@v1.0
-        with:
-          # IBM Cloud API key
-          IBM_CLOUD_API_KEY: GrLy5OEAY46tyNU51plJnmd-k_cxrfZgvaQP3vLXzKEu
-          # IBM Cloud Foundry API endpoint
-          IBM_CLOUD_CF_API: https://api.eu-gb.cf.cloud.ibm.com
-          # IBM Cloud Foundry organization name
-          IBM_CLOUD_CF_ORG: schokokex
-          # IBM Cloud Foundry space name
-          IBM_CLOUD_CF_SPACE: dev
+      - name: Install IBM Cloud CLI
+        run: curl -fsSL https://clis.cloud.ibm.com/install/linux | sh
+        shell: bash
+      - name: Install Cloud Foundry CLI
+        run: ibmcloud cf install
+        shell: bash
+      - name: Authenticate with IBM Cloud CLI
+        run: ibmcloud login --apikey GrLy5OEAY46tyNU51plJnmd-k_cxrfZgvaQP3vLXzKEu --no-region -g Default
+        shell: bash
+      - name: Target a Cloud Foundry org and space
+        run: ibmcloud target --cf-api https://api.eu-gb.cf.cloud.ibm.com -o schokokex -s dev
+        shell: bash
+      - name: Deploy to Cloud Foundry
+        run: ibmcloud cf push
+        shell: bash
